Tue May 13 12:58:18 2003  Simon McQueen  <sm@prismtechnologies.com>

        * examples/Content_Server/SMI_Iterator/client.bor:
        * examples/Content_Server/SMI_Iterator/server.bor:
        * examples/ior_corbaloc/client.bor:
        * examples/ior_corbaloc/corbaname_client.bor:
        * examples/ior_corbaloc/server.bor:
        * examples/OBV/Typed_Events/client.bor:
        * examples/OBV/Typed_Events/server.bor:
        * examples/PluggableUDP/tests/Basic/client.bor:
        * examples/PluggableUDP/tests/Basic/server.bor:
        * examples/PluggableUDP/tests/Performance/client.bor:
        * examples/PluggableUDP/tests/Performance/server.bor:
        * examples/PluggableUDP/tests/SimplePerformance/client.bor:
        * examples/PluggableUDP/tests/SimplePerformance/server.bor:
        * examples/POA/Adapter_Activator/Makefile.bor:
        * examples/POA/DSI/client.bor:
        * examples/POA/DSI/server.bor:
        * examples/POA/Explicit_Activation/Makefile.bor:
        * examples/POA/Forwarding/client.bor:
        * examples/POA/Forwarding/server.bor:
        * examples/POA/Generic_Servant/client.bor:
        * examples/POA/Loader/Makefile.bor:
        * examples/POA/On_Demand_Activation/Makefile.bor:
        * examples/POA/On_Demand_Loading/Makefile.bor:
        * examples/POA/POA_BiDir/Makefile.bor:
        * examples/POA/Reference_Counted_Servant/Makefile.bor:
        * examples/POA/TIE/client.bor:
        * examples/POA/TIE/server.bor:
        * examples/Quoter/Client.bor:
        * examples/Quoter/Factory_finder.bor:
        * examples/Quoter/Generic_factory.bor:
        * examples/Quoter/Server.bor:
        * examples/RTCORBA/Activity/Makefile.bor:
        * orbsvcs/ImplRepo_Service/ImR_Activator.bor:
        * orbsvcs/ImplRepo_Service/tao_imr.bor:
        * tests/AMH_Exceptions/server.bor:
        * tests/AMH_Oneway/client.bor:
        * tests/AMH_Oneway/server.bor:
        * tests/AMI/client.bor:
        * tests/AMI/server.bor: