@@ -4,7 +4,7 @@ SRC = $(BIN:%=%$(VAR).cpp) \
       Consumer.cpp \
       Supplier.cpp
 
-LDLIBS = -lTAO_RTEC_COSEC -lTAO_CosEvent -lTAO_RTEvent -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO
+LDLIBS = -lTAO_RTEC_COSEC -lTAO_CosEvent -lTAO_RTEvent -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging $(TAO_SRVR_LIBS)
 
 ifndef TAO_ROOT
   TAO_ROOT = $(ACE_ROOT)/TAO
